testsuite/tests/grammar/invalid_lexers/token_action_5.lkt
lexer foo_lexer {
    @ignore @text() example <- "example"
}
